add moment teacher, moment image
