# app/router/api_router.js
@@ -1,5 +1,5 @@
 const BaseRouter = require('./base_router');
-const { ApiCtrl, AuthCtrl, MomentCtrl, ParentCtrl, ImageCtrl, TeacherCtrl, StudentCtrl, ActivityCtrl, NotifyCtrl, ClassCtrl, SchoolCtrl, MealTypeCtrl, WeekPlanCtrl, AbsenseCtrl, StudyResultCtrl, TuitionCtrl, UploadCtrl} = require('../controllers');
+const { ApiCtrl, AuthCtrl, MomentCtrl, ParentCtrl, ImageCtrl, TeacherCtrl, StudentCtrl, ActivityCtrl, NotifyCtrl, ClassCtrl, SchoolCtrl, MealTypeCtrl, WeekPlanCtrl, AbsenseCtrl, StudyResultCtrl, TuitionCtrl, UploadCtrl, QRCodeCtrl} = require('../controllers');
 const ApiVerify = require('../middleware/api_verify');
 
 class ApiRouter extends BaseRouter{
@@ -24,6 +24,7 @@ class ApiRouter extends BaseRouter{
         const studyResultCtrl = new StudyResultCtrl();
         const tuitionCtrl = new TuitionCtrl();
         const uploadCtrl = new UploadCtrl();
+        const qrCodeCtrl = new QRCodeCtrl();
         //Api Auth
         this.addRouter('POST', '/user/register', authCtrl.register.bind(authCtrl));
         this.addRouter('POST', '/user/login', authCtrl.login.bind(authCtrl));
@@ -47,11 +48,13 @@ class ApiRouter extends BaseRouter{
         this.routerCtrl(absenseCtrl, "absense");
         this.routerCtrl(studyResultCtrl, "studyResult");
         this.routerCtrl(tuitionCtrl, "tuition");
-
+        this.routerCtrl(qrCodeCtrl, "qrCodeCheckin");
+        
         this.addRouter('GET', '/class/getClassByTeacher/:id', classCtrl.getClassByTeacher.bind(classCtrl), ApiVerify.verifyAccesskey);
         this.addRouter('GET', '/student/getStudentByClass/:id', studentCtrl.getStudentByClass.bind(studentCtrl), ApiVerify.verifyAccesskey);
         this.addRouter('GET', '/student/getStudentByParent/:id', studentCtrl.getStudentByParent.bind(studentCtrl), ApiVerify.verifyAccesskey);
-
+        this.addRouter('GET', '/student/getStudentBYQRCodeCheckin/:date', studentCtrl.getStudentBYQRCodeCheckin.bind(studentCtrl));
+        
         this.addRouter('POST', '/uploadImage', uploadCtrl.add.bind(uploadCtrl));
         
     }
